--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,9 @@
 .post__content {
     font-size: 16px;
 }
+.error__text {
+    color: red;
+}
+.error__input {
+    border-color: red !important;
+}
